project_sources/collector/fixtures/powershell_analysis/good/custom_safe_root_delete.ps1
$OutputRoot = Resolve-Path -LiteralPath (Join-Path $env:TEMP "dcoir-fixture")
$Target = Join-Path $OutputRoot "scratch"
if (-not $Target.StartsWith($OutputRoot.Path, [System.StringComparison]::OrdinalIgnoreCase)) {
    throw "Cleanup target escaped controlled root"
}
Remove-Item -LiteralPath $Target -Recurse -Force
