project_sources/collector/fixtures/powershell_analysis/bad/unsafe_wildcard_delete.ps1
$OutputRoot = $env:TEMP
Remove-Item -Path "$OutputRoot\*" -Recurse -Force
